--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,13 @@
   padding:  0; 
   box-sizing: border-box;
 }  
-.header { 
+.header,.footer { 
   height: 85px; 
   display: flex;  
   align-items: center; 
   background-color:#0d4faf ;
 } 
-.header__container{  
+.header__container, .footer__container{  
   padding: 15px 120px;
   height:  100%;  
   width: 100%;
@@ -31,8 +31,35 @@
   text-transform: uppercase;
 }   
 .main{
-
+  height: 100vh;
 }
 .main__container{ 
+    height: 100%;  
+    padding: 80px 25% ;
+} 
+.main__item {
+  height: 100%;
+  display: flex; 
+  flex-direction: column; 
+  justify-content: space-between; 
+  align-items: center;
+}
+.main__title{ 
+  font-weight: 900; 
+  color: black;
+  font-size: 28px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.main__subtitle{ 
+  font-weight: 600; 
+  color: black;
+  font-size: 20px;
+  text-decoration: none;
+}  
+.footer__contact{ 
+  color: #fff;
+  font-size: 12px;
+  text-decoration: none;
 
 }
